--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md bg-body-tertiary">
+<nav class="navbar navbar-expand-md bg-body-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="Pictures/MC.png" alt="MC" width="30" height="24">
+      <img src="Pictures/MC.png" alt="MC" width="30" height="30">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
