--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-body-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="Pictures/MC.png" alt="MC" width="30" height="30">
