--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="Pictures/MC.png" alt="MC" width="30" height="30">
+      <img src="Pictures/MC.png" alt="MC" width="35" height="35">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link" href="qualifications.html">Qualifications</a>
+        <a class="nav-link" href="credentials.html">Credentials</a>
         <a class="nav-link" href="work_experience.html">Work Experience</a>
       </div>
     </div>
