--- a/footer.html
+++ b/footer.html
@@ -17,8 +17,8 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#tiktok"/></svg></a></li>    
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.tiktok.com/@mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#tiktok"/></svg></a></li>    
     </ul>
 </footer>
