--- a/navbar.html
+++ b/navbar.html
@@ -9,8 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="about.html">About Me</a>
         <a class="nav-link" href="credentials.html">Credentials</a>
         <a class="nav-link" href="work_experience.html">Work Experience</a>
+        <a class="nav-link" href="darts.html">Darts</a>
       </div>
     </div>
   </div>
