--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marcus Cleary - Darts</title>
+    <title>Marcus Cleary - About Me</title>
     <link rel="icon" type="image/png" href="Pictures/MC.png">
     <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body class="container-fluid">
-    <h1>Darts</h1>
+    <h1>About Me</h1>
     <div id="navbar"></div>
     <script>
       fetch('navbar.html')
