--- a/darts.html
+++ b/darts.html
@@ -18,7 +18,85 @@
           document.getElementById('navbar').innerHTML = data;
         });
     </script>
-    <p>Page Under Construction!</p>
+
+    <div class="center-container">
+        <ul class="dartslist">
+            <li>Highest score - 180</li>
+            <li>Highest checkout - 170</li>
+            <li>Best Leg - 13 darts</li>
+        </ul>
+    </div>
+
+    <div class="slideshow-wrapper"> <!-- New wrapper div -->
+      <div class="slideshow-container">
+        <div class="slide active">
+          <img src="Pictures/Darts/image1.jpg" alt="Slide 1">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image2.jpg" alt="Slide 2">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image3.jpg" alt="Slide 3">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image4.jpg" alt="Slide 1">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image5.jpg" alt="Slide 2">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image6.jpg" alt="Slide 3">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image7.jpg" alt="Slide 1">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image8.jpg" alt="Slide 2">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image9.jpg" alt="Slide 3">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image10.jpg" alt="Slide 1">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image11.jpg" alt="Slide 2">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image12.jpg" alt="Slide 3">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image13.jpg" alt="Slide 1">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image14.jpg" alt="Slide 2">
+        </div>
+        <div class="slide">
+          <img src="Pictures/Darts/image15.jpg" alt="Slide 3">
+        </div>
+    
+        <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+        <a class="next" onclick="changeSlide(1)">&#10095;</a>
+      </div>
+    
+      <div class="dots-container">
+        <span class="dot" onclick="setSlide(0)"></span> 
+        <span class="dot" onclick="setSlide(1)"></span> 
+        <span class="dot" onclick="setSlide(2)"></span>
+        <span class="dot" onclick="setSlide(3)"></span> 
+        <span class="dot" onclick="setSlide(4)"></span> 
+        <span class="dot" onclick="setSlide(5)"></span> 
+        <span class="dot" onclick="setSlide(6)"></span> 
+        <span class="dot" onclick="setSlide(7)"></span> 
+        <span class="dot" onclick="setSlide(8)"></span>
+        <span class="dot" onclick="setSlide(9)"></span> 
+        <span class="dot" onclick="setSlide(10)"></span> 
+        <span class="dot" onclick="setSlide(11)"></span>
+        <span class="dot" onclick="setSlide(12)"></span> 
+        <span class="dot" onclick="setSlide(13)"></span> 
+        <span class="dot" onclick="setSlide(14)"></span>
+      </div>
+    </div>
 
     <div id="footer"></div>
     <script>
@@ -29,6 +107,7 @@
         });
     </script>
 
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
