--- a/darts.html
+++ b/darts.html
@@ -27,7 +27,7 @@
         </ul>
     </div>
 
-    <div class="slideshow-wrapper"> <!-- New wrapper div -->
+    <div class="slideshow-wrapper">
       <div class="slideshow-container">
         <div class="slide active">
           <img src="Pictures/Darts/image1.jpg" alt="Slide 1">
@@ -73,29 +73,17 @@
         </div>
         <div class="slide">
           <img src="Pictures/Darts/image15.jpg" alt="Slide 3">
-        </div>
-    
+        </div>    
+      </div>
+
+      <div class="controls-container">
+        <a class="go-to-beginning" onclick="goToBeginning()">&#171;</a>
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+        <span id="slide-counter">1/3</span>
         <a class="next" onclick="changeSlide(1)">&#10095;</a>
+        <a class="go-to-end" onclick="goToEnd()">&#187;</a>
       </div>
-    
-      <div class="dots-container">
-        <span class="dot" onclick="setSlide(0)"></span> 
-        <span class="dot" onclick="setSlide(1)"></span> 
-        <span class="dot" onclick="setSlide(2)"></span>
-        <span class="dot" onclick="setSlide(3)"></span> 
-        <span class="dot" onclick="setSlide(4)"></span> 
-        <span class="dot" onclick="setSlide(5)"></span> 
-        <span class="dot" onclick="setSlide(6)"></span> 
-        <span class="dot" onclick="setSlide(7)"></span> 
-        <span class="dot" onclick="setSlide(8)"></span>
-        <span class="dot" onclick="setSlide(9)"></span> 
-        <span class="dot" onclick="setSlide(10)"></span> 
-        <span class="dot" onclick="setSlide(11)"></span>
-        <span class="dot" onclick="setSlide(12)"></span> 
-        <span class="dot" onclick="setSlide(13)"></span> 
-        <span class="dot" onclick="setSlide(14)"></span>
-      </div>
+
     </div>
 
     <div id="footer"></div>
