--- a/credentials.html
+++ b/credentials.html
@@ -21,7 +21,10 @@
 	  <div class="section">
       <h2>Qualifications</h2>
 
-      <ul class="qual">
+  <ul class="qual">
+        <li>Network Engineer (Level 4): Distinction - February 2025</li>
+      </ul>    
+<ul class="qual">
         <li>Information Communications Technician (Level 3): Merit - July 2023</li>
       </ul>
 
