--- a/work_experience.html
+++ b/work_experience.html
@@ -24,7 +24,7 @@
 	<div class="job">
         <h2 class="blue-title">IT Support Technician - SOCOTEC UK Ltd</h2>
         <p class="job-duration">July 2023 - Present</p>
-        <p>Whilst working in this role I am completing a level 4 network engineer apprenticeship.</p>
+        <p>Whilst working in this role I completed a level 4 network engineer apprenticeship achieving a distinction.</p>
         <ul>
             <li>Working in a 2nd line support and 3rd line infrastructure role</li>
             <li>Troubleshooting and managing firewalls, routers, switches, and other network infrastructure in an MPLS network</li>
