--- a/footer.html
+++ b/footer.html
@@ -10,15 +10,15 @@
     </symbol>
 </svg>
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-dark">
-    <div class="col-md-4 d-flex align-items-center">
-        <img src="Pictures/MC.png" alt="MC" width="25" height="25" style="margin: 0 10px;">
-        <span class="mb-3 mb-md-0 text-light">Marcus Cleary</span>
+<footer class="d-flex justify-content-between align-items-center py-3 my-4 border-top bg-dark flex-row w-100">
+    <div class="d-flex align-items-center">
+      <img src="Pictures/MC.png" alt="MC" width="25" height="25" style="margin: 0 10px;">
+      <span class="text-light">Marcus Cleary</span>
     </div>
-
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.tiktok.com/@mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#tiktok"/></svg></a></li>    
+  
+    <ul class="nav list-unstyled d-flex mb-0">
+      <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://www.tiktok.com/@mcleary180"><svg class="bi" width="24" height="24"><use xlink:href="#tiktok"/></svg></a></li>    
     </ul>
-</footer>
+  </footer>
