--- a/credentials.html
+++ b/credentials.html
@@ -21,10 +21,7 @@
 	  <div class="section">
       <h2>Qualifications</h2>
 
-  <ul class="qual">
-        <li>Network Engineer (Level 4): Distinction - February 2025</li>
-      </ul>    
-<ul class="qual">
+      <ul class="qual">
         <li>Information Communications Technician (Level 3): Merit - July 2023</li>
       </ul>
 
@@ -60,7 +57,16 @@
             <th>Date</th>
           </tr>
         </thead>
-        <tbody class="table-group-divider">       
+        <tbody class="table-group-divider"> 
+          <tr>
+            <td>
+              <a href="https://www.credly.com/badges/ebe77e16-4a5a-4eff-a431-23a5d39a5918/public_url" target="_blank">
+                <img src="Pictures/CCNA.png" alt="CCNA Badge">
+              </a>
+            </td>
+            <td>CCNA</td>
+            <td>January 2026</td>
+          </tr>      
           <tr>
             <td>
               <a href="https://www.credly.com/badges/65d7b706-f9c1-4396-a44a-0a799ae20f4f/linked_in_profile" target="_blank">
