--- a/work_experience.html
+++ b/work_experience.html
@@ -20,16 +20,29 @@
                 });
         </script>
     </div>
+
+    <div class="job">
+        <h2 class="blue-title">Associate IT Infrastructure Engineer - SOCOTEC UK Ltd</h2>
+        <p class="job-duration">April 2024 - Present</p>
+        <ul>
+            <li>Working in a 2nd line support and 3rd line infrastructure role</li>
+            <li>Installing, maintaining and troubleshooting IT Infrastructure across all company sites</li>
+            <li>Managing Active Directory (including on-prem AD services such as DNS, DHCP, RADIUS)</li>
+            <li>Managing the company's 365 tenant (Azure, Entra, Exchange, SharePoint)</li>
+            <li>Maintaining VMWare and HCI virtualization</li>
+            <li>Windows Server OS management</li>
+        </ul>
+    </div>
     
 	<div class="job">
         <h2 class="blue-title">IT Support Technician - SOCOTEC UK Ltd</h2>
-        <p class="job-duration">July 2023 - Present</p>
+        <p class="job-duration">July 2023 - April 2024</p>
         <p>Whilst working in this role I completed a level 4 network engineer apprenticeship achieving a distinction.</p>
         <ul>
             <li>Working in a 2nd line support and 3rd line infrastructure role</li>
             <li>Troubleshooting and managing firewalls, routers, switches, and other network infrastructure in an MPLS network</li>
             <li>Support of desktop security/anti-virus systems</li>
-            <li>Active Directory (including on-prem AD services such as DNS, DHCP, RADIUS)</li>
+            <li>Managing Active Directory (including on-prem AD services such as DNS, DHCP, RADIUS)</li>
             <li>Maintaining VMWare and HCI virtualization</li>
             <li>Windows Server OS management</li>
         </ul>
