--- a/credentials.html
+++ b/credentials.html
@@ -22,6 +22,9 @@
       <h2>Qualifications</h2>
 
       <ul class="qual">
+        <li>Network Engineer (Level 4): Distinction - February 2024</li>
+      </ul>
+      <ul class="qual">
         <li>Information Communications Technician (Level 3): Merit - July 2023</li>
       </ul>
 
