Open mail in new tab

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="contact-cta">
       <h2>Get in Touch</h2>
       <p>If you'd like to connect, collaborate, or learn more about my work, feel free to reach out.</p>
-      <a href="mailto:marcushcleary@gmail.com" class="cta-button">Contact Me</a>
+      <a href="mailto:marcushcleary@gmail.com" target="_blank" class="cta-button">Contact Me</a>
     </section>
     
     <div id="footer"></div>
@@ -84,4 +84,5 @@
     <script src="script.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
+
 </html>
