--- a/work_experience.html
+++ b/work_experience.html
@@ -10,7 +10,7 @@
     </head>
   <body class="container-fluid">
     <div class="header">
-        <h1>Work Experience</h1>
+        <h1 class="site-title">Work Experience</h1>
         <div id="navbar"></div>
         <script>
             fetch('navbar.html')
