--- a/credentials.html
+++ b/credentials.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body class="container-fluid">
-    <h1>Credentials</h1>
+    <h1 class="site-title">Credentials</h1>
     <div id="navbar"></div>
     <script>
       fetch('navbar.html')
