--- a/darts.html
+++ b/darts.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body class="container-fluid">
-    <h1>Darts</h1>
+    <h1 class="site-title">Darts</h1>
     <div id="navbar"></div>
     <script>
       fetch('navbar.html')
@@ -24,6 +24,7 @@
             <li>Highest score - 180</li>
             <li>Highest checkout - 170</li>
             <li>Best Leg - 12 darts</li>
+            <li>Highest Recorded Average - 71.20</li>
         </ul>
     </div>
 
