--- a/work_experience.html
+++ b/work_experience.html
@@ -9,7 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
 
-    <body class="container-fluid">
+    <body>
 
         <!-- Page Header -->
         <h1 class="site-title">Work Experience</h1>
