--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <p class="tagline">IT Professional • Problem Solver</p>
         <p class="intro">
           I specialise in IT networking, troubleshooting, and delivering reliable technical solutions. 
-          Whether it's diagnosing complex issues, improving workflows, or helping people get the most 
-          out of their technology, I bring structure, clarity, and a calm approach to every challenge.
+          Whether it's diagnosing complex issues, or helping people get the most 
+          out of their technology, I bring structure and clarity to every challenge.
         </p>
       </div>
     </section>
