--- a/credentials.html
+++ b/credentials.html
@@ -4,12 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Marcus Cleary - Credentials</title>
+
     <link rel="icon" type="image/png" href="Pictures/MC.png">
     <link rel="stylesheet" href="main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    >
   </head>
+
   <body>
+
+    <!-- Page Title -->
     <h1 class="site-title">Credentials</h1>
+
+    <!-- Navbar -->
     <div id="navbar"></div>
     <script>
       fetch('navbar.html')
@@ -18,107 +30,118 @@
           document.getElementById('navbar').innerHTML = data;
         });
     </script>
-	  <div class="section">
-      <h2>Qualifications</h2>
 
-      <ul class="qual">
-        <li>Network Engineer (Level 4): Distinction - February 2024</li>
-      </ul>
-      <ul class="qual">
-        <li>Information Communications Technician (Level 3): Merit - July 2023</li>
-      </ul>
+    <!-- Qualifications Section -->
+    <section class="cred-section">
+      <div class="card cred-card">
+        <h2>Qualifications</h2>
 
-      <h3 class="blue-title">A Levels</h3>
-      <ul class="qual">
+        <ul class="qual">
+          <li>Network Engineer (Level 4): Distinction — February 2024</li>
+          <li>Information Communications Technician (Level 3): Merit — July 2023</li>
+        </ul>
+
+        <h3 class="blue-title">A Levels</h3>
+        <ul class="qual">
           <li>BTEC IT: D*</li>
           <li>Mathematics: A*</li>
           <li>Physics: B</li>
-      </ul>
+        </ul>
 
-      <h3 class="blue-title">GCSEs</h3>
-      <ul class="qual">
+        <h3 class="blue-title">GCSEs</h3>
+        <ul class="qual">
           <li>Mathematics: 9</li>
           <li>English Language: 7</li>
           <li>English Literature: 5</li>
           <li>Science: A</li>
           <li>Additional Science: A</li>
           <li>Geography: A*</li>
-          <li>Statistics: A</li>         
+          <li>Statistics: A</li>
           <li>Religious Studies: A</li>
           <li>i-media: Level 2 Merit</li>
-          <li>Spanish: B</li>          
-      </ul>
-    </div>
+          <li>Spanish: B</li>
+        </ul>
+      </div>
 
-    <div class="section certifications table-responsive">
-      <h2>Certifications</h2>
-      <table class="table table-bordered table-hover align-middle">
-        <thead class="table-dark">
-          <tr>
-            <th>Badge</th>
-            <th>Certification</th>
-            <th>Date</th>
-          </tr>
-        </thead>
-        <tbody class="table-group-divider"> 
-          <tr>
-            <td>
-              <a href="https://www.credly.com/badges/ebe77e16-4a5a-4eff-a431-23a5d39a5918/public_url" target="_blank">
-                <img src="Pictures/CCNA.png" alt="CCNA Badge">
-              </a>
-            </td>
-            <td>CCNA</td>
-            <td>January 2026</td>
-          </tr>      
-          <tr>
-            <td>
-              <a href="https://www.credly.com/badges/65d7b706-f9c1-4396-a44a-0a799ae20f4f/linked_in_profile" target="_blank">
-                <img src="Pictures/A+.png" alt="CompTIA A+ Badge">
-              </a>
-            </td>
-            <td>CompTIA A+</td>
-            <td>August 2024</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.credly.com/badges/25a19eae-3e4e-4a91-a7ad-2481f8839e0b/public_url" target="_blank">
-                <img src="Pictures/Security Fundamentals.png" alt="Microsoft Security Badge">
-              </a>
-            </td>
-            <td>Microsoft Security, Compliance, and Identity Fundamentals</td>
-            <td>June 2024</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.credly.com/badges/64411248-2d4a-45ad-ad3c-abcf35190dd9/public_url" target="_blank">
-                <img src="Pictures/Azure Fundamentals.png" alt="Azure Fundamentals Badge">
-              </a>
-            </td>
-            <td>Microsoft Azure Fundamentals</td>
-            <td>May 2024</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.credly.com/badges/d34d3b44-172b-44ca-8398-1b4f44abb774/public_url" target="_blank">
-                <img src="Pictures/Network+.png" alt="CompTIA Network+ Badge">
-              </a>
-            </td>
-            <td>CompTIA Network+</td>
-            <td>April 2024</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.credly.com/badges/75b65709-0ad2-4895-8af7-5b6ded6c3130/public_url" target="_blank">
-                <img src="Pictures/365 Fundamentals.png" alt="Microsoft 365 Fundamentals Badge">
-              </a>
-            </td>
-            <td>Microsoft 365 Fundamentals</td>
-            <td>January 2024</td>
-          </tr>
-        </tbody>
-      </table>      
-    </div>
+      <!-- Certifications Section -->
+      <div class="card cert-card certifications table-responsive">
+        <h2>Certifications</h2>
 
+        <table class="table table-hover align-middle table-bordered">
+          <thead>
+            <tr>
+              <th>Badge</th>
+              <th>Certification</th>
+              <th>Date</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>
+                <a href="https://www.credly.com/badges/ebe77e16-4a5a-4eff-a431-23a5d39a5918/public_url" target="_blank">
+                  <img src="Pictures/CCNA.png" alt="CCNA Badge">
+                </a>
+              </td>
+              <td>CCNA</td>
+              <td>January 2026</td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="https://www.credly.com/badges/65d7b706-f9c1-4396-a44a-0a799ae20f4f/linked_in_profile" target="_blank">
+                  <img src="Pictures/A+.png" alt="CompTIA A+ Badge">
+                </a>
+              </td>
+              <td>CompTIA A+</td>
+              <td>August 2024</td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="https://www.credly.com/badges/25a19eae-3e4e-4a91-a7ad-2481f8839e0b/public_url" target="_blank">
+                  <img src="Pictures/Security Fundamentals.png" alt="Microsoft Security Badge">
+                </a>
+              </td>
+              <td>Microsoft Security, Compliance, and Identity Fundamentals</td>
+              <td>June 2024</td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="https://www.credly.com/badges/64411248-2d4a-45ad-ad3c-abcf35190dd9/public_url" target="_blank">
+                  <img src="Pictures/Azure Fundamentals.png" alt="Azure Fundamentals Badge">
+                </a>
+              </td>
+              <td>Microsoft Azure Fundamentals</td>
+              <td>May 2024</td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="https://www.credly.com/badges/d34d3b44-172b-44ca-8398-1b4f44abb774/public_url" target="_blank">
+                  <img src="Pictures/Network+.png" alt="CompTIA Network+ Badge">
+                </a>
+              </td>
+              <td>CompTIA Network+</td>
+              <td>April 2024</td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="https://www.credly.com/badges/75b65709-0ad2-4895-8af7-5b6ded6c3130/public_url" target="_blank">
+                  <img src="Pictures/365 Fundamentals.png" alt="Microsoft 365 Fundamentals Badge">
+                </a>
+              </td>
+              <td>Microsoft 365 Fundamentals</td>
+              <td>January 2024</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- Footer -->
     <div id="footer"></div>
     <script>
       fetch('footer.html')
@@ -128,6 +151,11 @@
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+
   </body>
 </html>
