--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
     </symbol>
 </svg>
 
-<footer class="d-flex justify-content-between align-items-center py-3 border-top bg-dark flex-row w-100">
+<footer class="d-flex justify-content-between align-items-center py-3 bg-dark flex-row w-100">
   <div class="d-flex align-items-center">
     <img src="Pictures/MC.png" alt="MC" width="25" height="25" style="margin: 0 10px;">
     <span class="text-light">Marcus Cleary</span>
