--- a/darts.html
+++ b/darts.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="background: linear-gradient(135deg, #1a2a40, #27496d);">
+
     <h1 class="site-title">Darts</h1>
+
     <div id="navbar"></div>
     <script>
       fetch('navbar.html')
@@ -19,73 +21,36 @@
         });
     </script>
 
-    <div class="center-container">
-        <ul class="dartslist">
-            <li>Highest score - 180</li>
-            <li>Highest checkout - 170</li>
-            <li>Best Leg - 12 darts</li>
-            <li>Highest Recorded Average - 71.20</li>
-        </ul>
+    <main class="container">
+
+      <section>
+        <div class="card darts-card">
+          <h2>Darts Statistics</h2>
+            <ul class="dartslist">
+                <li>Highest score - 180</li>
+                <li>Highest checkout - 170</li>
+                <li>Best Leg - 12 darts</li>
+                <li>Highest Recorded Average - 71.20</li>
+            </ul>
+        </div>
+      </section>
+
+      <section>
+        <div class="slideshow-wrapper">
+        <div class="slideshow-container">
+        </div>
+
+        <div class="controls-container">
+          <button class="go-to-beginning" onclick="goToBeginning()">&#10094;&#10094;</button>
+          <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+          <span id="slide-counter">1/3</span>
+          <button class="next" onclick="changeSlide(1)">&#10095;</button>
+          <button class="go-to-end" onclick="goToEnd()">&#10095;&#10095;</button>
+        </div>
     </div>
+      </section>
 
-    <div class="slideshow-wrapper">
-      <div class="slideshow-container">
-        <div class="slide active">
-          <img src="Pictures/Darts/image1.jpg" alt="Slide 1">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image2.jpg" alt="Slide 2">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image3.jpg" alt="Slide 3">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image4.jpg" alt="Slide 1">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image5.jpg" alt="Slide 2">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image6.jpg" alt="Slide 3">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image7.jpg" alt="Slide 1">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image8.jpg" alt="Slide 2">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image9.jpg" alt="Slide 3">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image10.jpg" alt="Slide 1">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image11.jpg" alt="Slide 2">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image12.jpg" alt="Slide 3">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image13.jpg" alt="Slide 1">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image14.jpg" alt="Slide 2">
-        </div>
-        <div class="slide">
-          <img src="Pictures/Darts/image15.jpg" alt="Slide 3">
-        </div>    
-      </div>
-
-      <div class="controls-container">
-        <a class="go-to-beginning" onclick="goToBeginning()">&#171;</a>
-        <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-        <span id="slide-counter">1/3</span>
-        <a class="next" onclick="changeSlide(1)">&#10095;</a>
-        <a class="go-to-end" onclick="goToEnd()">&#187;</a>
-      </div>
-
-    </div>
+    </main>  
 
     <div id="footer"></div>
     <script>
